package com.uitopic.restock.platform.resources.domain.model.aggregates;

public class Batch {
}
