package com.uitopic.restock.platform.resources.domain.model.entities;

public class Inventory {
}
