package com.uitopic.restock.platform.resources.domain.model.valueobjects;

/**
 * Enumeration representing the possible states of a branch. This enum is used to indicate whether a branch is active or inactive.
 * The ACTIVE state indicates that the branch is operational and can perform its intended functions, while the INACTIVE state indicates that the branch is not currently operational.
 */
public enum BranchStates {
    ACTIVE,
    INACTIVE
}
