package com.uitopic.restock.platform.resources.domain.model.valueobjects;

public enum SupplyNames {
}
